2004-08-01 23:17 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormLib/IBEditors.m: Removed some old comments which are
	no longer pertinent.   Added documentation for all methods.
	* GormLib/IBObjectAdditions.m: Added documentation for all
	methods.
	* GormLib/IBPalette.h: Clarified documentation of one of
	the methods.
	* Palettes/0Menus/GormNSMenu.m: Removed some old commented
	out code.  Changed superclass of GormNSMenuWindow to NSPanel.
	* Palettes/2Controls/inspectors.m: Made the first two lines
	conditional for NSForm and subclasses.  These were causing
	a bug which was making it difficult to edit button matrices
	since the title would revert when clicking on on the next
	button.  This corrects issue #9830.

2004-07-27 02:15 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormLib/IBInspector.m: Change the name of the method called
	when receiving IBDocumentWillCloseNotification to _releaseObject:
	instead of handleNotification:.  This prevents confusion as some
	of the subclasses define handleNotification for other
	purposes.
	* GormDocument.m: Modified the code in instantiateObject so that
	NSView itself can be instantiated.


2004-07-27 02:15 Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: Cleaned up some commented out code.
	* GormDocument.m: Added code in [GormDocument instantiateClass] 
	to add the appropriate information to the document when an
	NSView subclass is instantiated in the classes view.  
	This is for "standalone view" support.  Some additional cleanup.
	* GormGenericEditor.m: The editor wasn't calling 
	[GormDocument editor:didCloseForObject:] as it should when the
	editor is closed. Added implementation for isOpened to give
	any subeditors the correct response when the editor is opened.
	* GormInternalViewEditor.m: Added code to show the appropriate
	image when we have a standalone view in the document.
	* GormPrivate.h: Added declaration for isOpened to 
	GormGenericEditor class declaration.