@@ -1,3 +1,10 @@
+2004-08-02 00:14 Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* Palettes/2Controls/inspectors.m: Reversion of previous
+	change.   The real problem was that in setObject: the 
+	_setValuesFromObject: method was being called unnecessarily.
+	The call has been removed.
+	
 2004-08-01 23:17 Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* GormLib/IBEditors.m: Removed some old comments which are
